# delivery_order_service

./: .gitignore  Cargo.toml  docker-compose.dev.yml
migrations/: 20230731111244_initial-tables.sql  20230801094317_add-status-to-order.sql  20230801095636_triggers-for-time-updates-and-default-time.sql  20230801110119_not-null-status-order.sql  20230818070120_fix-update-date-trigger.sql
src/: lib.rs  main.rs
src/db/: utils.rs
src/graphql/: mod.rs  schema.rs
src/graphql/extension/: authentication.rs
src/graphql/mutation/: product.rs  root.rs
src/graphql/query/: mod.rs  product.rs  root.rs
src/graphql/services/: utils.rs
src/models/: authorization.rs  mod.rs  products.rs  token.rs
src/utils/: config.rs  errors.rs  mod.rs  permissions.rs
