[package]
name = "delivery_order_service"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { version = "0.6.11", features = ["headers"] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.93"
serde = { version = "1.0.179", features = ["derive"] }
dotenv = "0.15.0"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio"] }

async-graphql = "6.0.0"
async-graphql-axum = "6.0.0"


tracing = { version = "0.1.37" }
tracing-bunyan-formatter = "0.3.8"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "registry", "json"] }
tracing-futures = "0.2.5"
tracing-actix-web = "0.7.5"
tracing-appender = "0.2.2"

thiserror = "1.0.44"